--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "packages/acl"]
 	path = packages/acl
 	url = git://github.com/obullo/acl.git
+[submodule "packages/agent"]
+	path = packages/agent
+	url = git://github.com/obullo/agent.git
