added new submodule db

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "packages/database_pdo"]
 	path = packages/database_pdo
 	url = git://github.com/obullo/database_pdo.git
+[submodule "packages/db"]
+	path = packages/db
+	url = git://github.com/obullo/db.git
