--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "packages/email"]
 	path = packages/email
 	url = git://github.com/obullo/email.git
+[submodule "packages/encrypt"]
+	path = packages/encrypt
+	url = git://github.com/obullo/encrypt.git
