--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "packages/form_json"]
 	path = packages/form_json
 	url = git://github.com/obullo/form_json.git
+[submodule "packages/ftp"]
+	path = packages/ftp
+	url = git://github.com/obullo/ftp.git
