--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "packages/hmvc"]
 	path = packages/hmvc
 	url = git://github.com/obullo/hmvc.git
+[submodule "packages/hooks"]
+	path = packages/hooks
+	url = git://github.com/obullo/hooks.git
