--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "packages/log_write"]
 	path = packages/log_write
 	url = git://github.com/obullo/log_write.git
+[submodule "packages/model"]
+	path = packages/model
+	url = git://github.com/obullo/model.git
