--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "packages/mongo_db"]
 	path = packages/mongo_db
 	url = git://github.com/obullo/mongo_db.git
+[submodule "packages/obullo"]
+	path = packages/obullo
+	url = git://github.com/obullo/obullo.git
