--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "packages/odm"]
 	path = packages/odm
 	url = git://github.com/obullo/odm.git
+[submodule "packages/output"]
+	path = packages/output
+	url = git://github.com/obullo/output.git
