--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "packages/output"]
 	path = packages/output
 	url = git://github.com/obullo/output.git
+[submodule "packages/pager"]
+	path = packages/pager
+	url = git://github.com/obullo/pager.git
