--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule "packages/pdo_4d"]
 	path = packages/pdo_4d
 	url = git://github.com/obullo/pdo_4d.git
+[submodule "packages/pdo_cubrid"]
+	path = packages/pdo_cubrid
+	url = git://github.com/obullo/pdo_cubrid.git
