--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "packages/pdo_cubrid"]
 	path = packages/pdo_cubrid
 	url = git://github.com/obullo/pdo_cubrid.git
+[submodule "packages/pdo_firebird"]
+	path = packages/pdo_firebird
+	url = git://github.com/obullo/pdo_firebird.git
