--- a/.gitmodules
+++ b/.gitmodules
@@ -103,3 +103,6 @@
 [submodule "packages/pdo_mssql"]
 	path = packages/pdo_mssql
 	url = git://github.com/obullo/pdo_mssql.git
+[submodule "packages/pdo_mysql"]
+	path = packages/pdo_mysql
+	url = git://github.com/obullo/pdo_mysql.git
