--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,6 @@
 [submodule "packages/pdo_mysql"]
 	path = packages/pdo_mysql
 	url = git://github.com/obullo/pdo_mysql.git
+[submodule "packages/pdo_oci"]
+	path = packages/pdo_oci
+	url = git://github.com/obullo/pdo_oci.git
