--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "packages/pdo_odbc"]
 	path = packages/pdo_odbc
 	url = git://github.com/obullo/pdo_odbc.git
+[submodule "packages/pdo_sqlite"]
+	path = packages/pdo_sqlite
+	url = git://github.com/obullo/pdo_sqlite.git
