--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@
 [submodule "packages/sess_database"]
 	path = packages/sess_database
 	url = git://github.com/obullo/sess_database.git
+[submodule "packages/sess_mongo"]
+	path = packages/sess_mongo
+	url = git://github.com/obullo/sess_mongo.git
