--- a/.gitmodules
+++ b/.gitmodules
@@ -169,3 +169,6 @@
 [submodule "packages/zip"]
 	path = packages/zip
 	url = git://github.com/obullo/zip.git
+[submodule "packages/date_get"]
+	path = packages/date_get
+	url = git://github.com/obullo/date_get.git
