--- a/.gitmodules
+++ b/.gitmodules
@@ -169,3 +169,6 @@
 [submodule "packages/date_get"]
 	path = packages/date_get
 	url = git://github.com/obullo/date_get.git
+[submodule "packages/response"]
+	path = packages/response
+	url = git://github.com/obullo/response.git
