--- a/.gitmodules
+++ b/.gitmodules
@@ -172,3 +172,6 @@
 [submodule "packages/schema_mysql"]
 	path = packages/schema_mysql
 	url = git://github.com/obullo/schema_mysql.git
+[submodule "packages/bcrypt"]
+	path = packages/bcrypt
+	url = git://github.com/obullo/bcrypt.git
