--- a/.gitmodules
+++ b/.gitmodules
@@ -217,3 +217,6 @@
 [submodule "modules/packages/error"]
 	path = modules/packages/error
 	url = git://github.com/obullo/error.git
+[submodule "modules/packages/exceptions"]
+	path = modules/packages/exceptions
+	url = git://github.com/obullo/exceptions.git
