--- a/.gitmodules
+++ b/.gitmodules
@@ -280,3 +280,6 @@
 [submodule "modules/packages/pdo_mssql"]
 	path = modules/packages/pdo_mssql
 	url = git://github.com/obullo/pdo_mssql.git
+[submodule "modules/packages/pdo_mysql"]
+	path = modules/packages/pdo_mysql
+	url = git://github.com/obullo/pdo_mysql.git
