--- a/.gitmodules
+++ b/.gitmodules
@@ -292,3 +292,6 @@
 [submodule "modules/packages/pdo_sqlite"]
 	path = modules/packages/pdo_sqlite
 	url = git://github.com/obullo/pdo_sqlite.git
+[submodule "modules/packages/request"]
+	path = modules/packages/request
+	url = git://github.com/obullo/request.git
