--- a/.gitmodules
+++ b/.gitmodules
@@ -298,3 +298,6 @@
 [submodule "modules/packages/response"]
 	path = modules/packages/response
 	url = git://github.com/obullo/response.git
+[submodule "modules/packages/router"]
+	path = modules/packages/router
+	url = git://github.com/obullo/router.git
