--- a/.gitmodules
+++ b/.gitmodules
@@ -337,3 +337,6 @@
 [submodule "modules/packages/utf8"]
 	path = modules/packages/utf8
 	url = git://github.com/obullo/utf8.git
+[submodule "modules/packages/validator"]
+	path = modules/packages/validator
+	url = git://github.com/obullo/validator.git
