--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
         "core": "Obullo",
         "config": "Config",
         "db": "Database_Pdo",
-        "exceptions": "Exceptions",
+        "exception": "Exceptions",
         "lingo": "Lingo",
         "log": "Log_Write",
         "hooks": "Hooks",
         "output": "Output",
         "router": "Router",
         "security": "Security",
+        "sess_native": "Sess_Native",
+        "sess_database": "Sess_Database",
+        "sess_mongo": "Sess_Mongo",
         "uri": "Uri",
         "view": "View",
         "validator": "Validator"
