--- a/.gitmodules
+++ b/.gitmodules
@@ -175,3 +175,6 @@
 [submodule "modules/packages/zip"]
 	path = modules/packages/zip
 	url = git://github.com/obullo/zip.git
+[submodule "modules/packages/simple_captcha"]
+	path = modules/packages/simple_captcha
+	url = git://github.com/obullo/simple_captcha.git
