--- a/example.htaccess.dist
+++ b/example.htaccess.dist
@@ -12,8 +12,8 @@ php_value memory_limit 32M
 
     # Removes access to the Core folders by users.
     # previously this would not have been possible.
-    # 'packages' can be replaced if you have renamed your packages folder.
-    RewriteCond %{REQUEST_URI} ^(app|packages|modules)\b.*
+    # 'packages' can be replaced if you have renamed your modules folder.
+    RewriteCond %{REQUEST_URI} ^(app|modules)\b.*
     RewriteRule ^(.*)$ index.php/$1 [L]
 
     # Checks to see if the user is attempting to access a valid file,
